Password input fields spacing issue resolved

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -272,7 +272,7 @@ input:-webkit-autofill {
 
 /* Form Styles */
 .form-div {
-  width: 60%;
+  width: 70%;
 
   @media (max-width: 768px) {
     width: 100%;
